# namedoptions

./: CMakeLists.txt  README.md
namedoptions/: CMakeLists.txt  namedoptions.h  namedoptions_p.h
tests/: CMakeLists.txt  taschenformat.h  taschentest.cpp  taschentest.h  tst_namedoptions.cpp  tst_taschenformat.cpp
